Fixed Random recipe on mobile. added changing widths to cards.

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h1 {
 
 #container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 1rem;
   width: 80%;
   margin: 0 auto;
